Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34489

Items trigger warning in QTransform: "QTransform::translate with NaN called"

XMLWordPrintable

    • 81768d64fda69a7d464338660b552979b9e74b3a

      Items trigger warning in QTransform: "QTransform::translate with NaN called"

      How to reproduce: start Qt Quick Designer.

      The warning does no harm, but Qt Creator should be free of warnings.

      Stacktrace:

      >	Qt5Guid.dll!QTransform::translate(double dx, double dy) Line 418	C++
       	Qt5Quickd.dll!QQuickItemPrivate::itemToParentTransform(QTransform & t) Line 2643	C++
       	Qt5Quickd.dll!QQuickItemPrivate::itemToWindowTransform() Line 2632	C++
       	Qt5Quickd.dll!QQuickItemPrivate::windowToItemTransform() Line 2621	C++
       	Qt5Quickd.dll!QQuickItem::mapFromScene(const QPointF & point) Line 6892	C++
       	Qt5Quickd.dll!QQuickMouseArea::geometryChanged(const QRectF & newGeometry, const QRectF & oldGeometry) Line 956	C++
       	Qt5Quickd.dll!QQuickItem::setY(double v) Line 5821	C++
       	Qt5Quickd.dll!QQuickAnchorsPrivate::setItemY(double v) Line 395	C++
       	Qt5Quickd.dll!QQuickAnchorsPrivate::updateVerticalAnchors() Line 583	C++
       	Qt5Quickd.dll!QQuickAnchorsPrivate::itemGeometryChanged(QQuickItem * __formal, const QRectF & newG, const QRectF & oldG) Line 455	C++
       	Qt5Quickd.dll!QQuickItem::geometryChanged(const QRectF & newGeometry, const QRectF & oldGeometry) Line 3279	C++
       	Qt5Quickd.dll!QQuickItem::setY(double v) Line 5821	C++
      
      
      void QQuickItemPrivate::itemToParentTransform(QTransform &t) const
      {
          if (x || y)
              t.translate(x, y);
      
      

      y = -1.#IND000000000000

      This looks like the code for setting y relies on y beeing initialised already.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thohartm Thomas Hartmann
            thohartm Thomas Hartmann
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes