QQuickItem: Ignore NaN x and y values.

These cause warnings, and incorrect rendering. We already guard width and height
against NaN, so doing the same with x & y seems like a sensible idea.

Change-Id: Ib33e51fe0beb9a2fa30fbf70743c8d6384a99441
Task-number: QTBUG-34489
Task-number: QTBUG-50604
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>