src/quick/items/qquickitem.cpp
@@ -6217,6 +6217,8 @@ QPointF QQuickItem::position() const
 void QQuickItem::setX(qreal v)
 {
     Q_D(QQuickItem);
+    if (qIsNaN(v))
+        return;
     if (d->x == v)
         return;
 
@@ -6232,6 +6234,8 @@ void QQuickItem::setX(qreal v)
 void QQuickItem::setY(qreal v)
 {
     Q_D(QQuickItem);
+    if (qIsNaN(v))
+        return;
     if (d->y == v)
         return;
 
